Subscription: Update errors
