# internal/api/router.go
@@ -25,9 +25,9 @@ func NewRouter(log *slog.Logger, serviceRepo *repository.ServiceRepository, subs
 
 	router.Use(logger.New(log))
 
-    router.Get("/health", func(w http.ResponseWriter, r *http.Request) {
-        w.WriteHeader(http.StatusOK)
-    })
+	router.Get("/health", func(w http.ResponseWriter, r *http.Request) {
+		w.WriteHeader(http.StatusOK)
+	})
 
 	subscriptionService := service.NewSubscriptionService(serviceRepo, subscriptionRepo, log)
 	statsService := service.NewStatsService(statsRepo, log)
@@ -39,10 +39,10 @@ func NewRouter(log *slog.Logger, serviceRepo *repository.ServiceRepository, subs
 		httpSwagger.URL("/static/swagger/swagger.json"),
 	))
 
-    router.Route("/api/v1", func(r chi.Router) {
-        r.Route("/subscriptions", func(r chi.Router) {
-            r.Mount("/", handlers.GetSubscriptionsRoutes(subscriptionService, log))
-        })
+	router.Route("/api/v1", func(r chi.Router) {
+		r.Route("/subscriptions", func(r chi.Router) {
+			r.Mount("/", handlers.GetSubscriptionsRoutes(subscriptionService, log))
+		})
 		r.Mount("/stats", handlers.GetStatRoutes(statsService, log))
 	})
 
